Fixed id issue, working on spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ body, html {
 	left: 50%;
 	transform: translateX(-50%);
 	grid-gap: 60px 60px;
+	margin: 60px 0px 100px;
 }
 
 .item  > img {
@@ -51,6 +52,11 @@ body, html {
 	justify-content: center;
 	align-items: center;
 }
+
+#o1 > img {
+	height: 325px;
+}
+
 
 .list {
 	text-align: center;
